fix (home-page): fixed whitespace around the content

--- a/pages/home-page/assets/css/home-page.css
+++ b/pages/home-page/assets/css/home-page.css
@@ -1,3 +1,8 @@
+body {
+    margin: -1.5rem;
+    padding: 0;
+}
+
 .homepage-container {
     background: linear-gradient(rgba(11, 6, 6, 0.9), rgba(30,15,15,0.9));
     color: #f0e6d2;
@@ -7,12 +12,16 @@
 .hero-section {
     position: relative;
     height: 100vh;
-    
+    width: 100vw;
+    margin-left: calc(-50vw + 50%);
+    overflow: hidden;
 }
 
 .hero-carousel {
     position: relative;
     height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
 
 .carousel-item {
@@ -53,6 +62,7 @@
     background: linear-gradient(to bottom, rgba(11,6,6,0.4) 0%,
     rgba(30,15,15,0.7) 50%,
     rgba(11,6,6,0.9) 100%);
+    z-index: 1;
 }
 
 .hero-content {
